# backend_clinic_copilot_nlp

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.backend  README.md  copiloto_clinico.txt  docker-compose.yml  main.py  pyproject.toml
.atl/: skill-registry.md
app/: main.py
app/api/routes/: analyze.py  auth.py  clinical.py  health.py  patients.py
app/api/schemas/: auth.py  clinical.py  patient.py  request.py  response.py
app/core/: config.py  security.py
app/core/prompts/: clinical.py
app/core/services/: clinical_data_service.py  patient_service.py  summarizer.py
app/db/: base.py
app/db/models/: __init__.py  clinical_analysis.py  patient.py
app/infrastructure/llm/: base.py  factory.py  huggingface.py  ollama.py  openai_provider.py
data/test_cases/: tc_001.json  tc_002.json  tc_003.json  tc_004.json  tc_005.json
docs/: PRD.md  dataset.md  docker.md  frontend.md  guia_api.md  marco_colaboracion_medica.md  prompt.md
scripts/: entrypoint.sh  seed.py
slides/: create_slides.py
tests/: conftest.py
tests/integration/: test_analyze_route.py  test_analyze_v1.py  test_clinical.py  test_health_route.py  test_patients.py
tests/unit/: test_clinical_data_service.py  test_config.py  test_llm_base.py  test_llm_factory.py  test_openai_provider.py  test_parse.py  test_patient_service.py  test_prompts.py  test_schemas.py  test_stub_providers.py  test_summarizer.py
