[project]
name = "clinic-copilot-nlp"
version = "0.1.0"
description = "FastAPI backend for clinical history summarization using LLMs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "openai>=1.54.0",
    "pydantic-settings>=2.6.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
]
